AppStore/wwwroot/css/app.css
@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');

html, body {
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

a, .btn-link {
    color: #0366d6;
}

app {
    position: relative;
    display: flex;
    flex-direction: column;
}

.bottom-row {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    height: 3.5rem;
    display: flex;
    align-items: center;
    background-color: #f7f7f7;
    border-top: 1px solid #d6d5d5;
}

#blazor-error-ui {
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

#blazor-error-ui .dismiss {
    cursor: pointer;
    position: absolute;
    right: 0.75rem;
    top: 0.5rem;
}

@media (max-width: 767.98px) {

}

@media (min-width: 768px) {

}

.flex-auto{
    flex: 1 1 auto;
}

.align-space-evenly {
    align-content: space-evenly;
}

.align-self-center {
    align-self: center
}

.white-space-nowrap {
    white-space: nowrap;
}

.back-btn {
    line-height: 20px;
    font-size: 1.2rem;
    border: none !important;
}

.header-text {
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: calc(100vw - 400px);
}

.border-gray {
    border: 1px solid #bbb;
}

.border-radius {
    border-radius: .25rem;
}


.browser-navbar {
    background-color: #f7f7f7;
    border-bottom: 1px solid #d6d5d5;
    box-shadow: 0 1px 2px 0px rgb(0 0 0 / 14%);
}

#presentation {
    background-color: #eee;
    padding: 16px;
    height: calc(100vh - 14em);
    max-height: calc(100vh - 14em);
    overflow-y: auto;
    overflow-x: hidden;
}

#presentation > .content{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.browser-item {
    flex: 1 1 33%;
    margin-right: 8px;
    margin-bottom: 16px;
    height: 120px;
    background-color: #fff;
    transition: all 0.3s;
    cursor: pointer;
    max-width: 320px;
    animation-fill-mode: backwards !important;
    border: solid 1px gray;
    display: flex;
    border-radius: .25rem;
}

.browser-item:hover{
    transform: scale(1.05);
    box-shadow: 0 0 6px 1px rgb(0 0 0 / 28%);
}

.browser-item.active{
    animation-delay: 0s !important;
    animation-name: zoom;
    animation-duration: 275ms !important;
    animation-timing-function: linear;
    z-index: 1;
}

.browser-item.active.folder {
    animation-fill-mode: forwards !important;
}

.browser-item .item-image{
    flex: 0 0 104px;
    align-self: center;
}

.browser-item .item-image img{
    width: 96px;
    height: auto;
}

.browser-item .item-text {
    align-self: center;
    flex: 1 1 calc(100% - 104px);
}

.filter-input {
    border-radius: .25rem !important;
    padding-right: 32px;
}

.filter-input-button {
    position: absolute;
    right: 2px;
    z-index: 100;
    padding: .35rem .5rem;
}

.filter-input-button .oi.oi-x {
    font-size: 0.8rem;
    color: gray;
    top: -.5px;
}

.filter-input-button .oi.oi-magnifying-glass {
    font-size: 0.9rem;
    color: dimgray;
}

@keyframes zoom{
    from {
        filter: none;
        transform: scale(1.05);
        opacity: 1;
    }

    to {
        filter: blur(8px);
        transform: scale(2);
        opacity: 0.2;
    }
}

